--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Bomb Defusal Game</title>
+    <title>CS2</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="src/game.js" defer></script>
-    <script src="src/map.js" defer></script>
-    <script src="src/player.js" defer></script>
-    <script src="src/weapons.js" defer></script>
-    <script src="src/bomb.js" defer></script>
-    <script src="src/ui.js" defer></script>
+    <script src="game.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
